<resources>
    <string name="app_name"> ASTRA </string>
    <string name="LOGOUT">Logout</string>
    <string name="REGISTER_USER">REGISTER NEW USER</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="license_key">License Key</string>
    <string name="already_have_account_sign_in">Already have Account. Sign In</string>

    <string name="error_email_empty">Email cannot be empty</string>
    <string name="error_email_wrong_format">Wrong email format</string>

    <!--validators-->
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="error_password_length">Password should be atleast 8 letters</string>
    <string name="error_confirm_password_empty">Confirm Password cannot be empty</string>
    <string name="error_license_empty">License cannot be empty</string>
    <string name="error_contact_empty">Contact cannot be empty</string>
    <string name="error_aadhar_empty">Aadhar cannot be empty</string>
    <string name="error_pincode_empty">Pincode cannot be empty</string>
    <string name="invalid_contact">Invalid Contact</string>
    <string name="contact_length_should_be_10">Contact length should be 10</string>
    <string name="invalid_aadhar">Invalid Aadhar</string>
    <string name="invalid_pincode">Invalid Pincode</string>
    <string name="dont_have_account_create_one">Dont\' have Account. Create One</string>
    <string name="field_cannot_be_left_blank">Field can\'t be left blank</string>
    <string name="error_dob_empty">Date can\'t be blank</string>
    <string name="invalid_date">Invalid Date Format</string>

    <!--   admin home screen -->
    <string name="admin_home_switch_label_out">OUT</string>
    <string name="press_to_scan_qr_here">QrScanner</string>
    <string name="admin_search_username_label">Enter Username</string>
    <string name="desc_of_send">SendDataButton</string>
    <string name="cd_scanner">TODO</string>
    <string name="click_here_to_scan">Click here to Scan</string>
    <string name="or">OR</string>
    <string name="admin_home_screen_wrong_scan_text">Nothing to scan</string>
    <string name="admin_home_screen_retry_action_text">Retry</string>


    <!--    create general user-->
    <string name="create_general_user_name">Full Name</string>
    <string name="create_general_fathers_name">Father Name</string>
    <string name="create_general_user_email_address">Email</string>
    <string name="create_general_user_dob">Date Of Birth (DD-MM-YYYY)</string>
    <string name="create_general_user_contact">Contact (10 digit)</string>
    <string name="create_general_user_address">Address</string>
    <string name="create_general_user_aadhar">Aadhar</string>
    <string name="create_general_user_pin_code">Pincode</string>
    <string name="please_correct_all_the_errors">Please correct all the errors</string>


    <string name="doc">Doc</string>
    <string name="save_user">Save</string>
    <string name="front_doc">Front Doc</string>
    <string name="back_doc">Back Doc</string>
    <string name="username">userName</string>
    <string name="ok">OK</string>
    <string name="verify">Verify</string>

    <!--    Admin Verify Doc-->
    <string name="registered_doc">Registered Doc</string>
    <string name="admin_verify_doc">User Documents</string>
    <string name="scan_alert_msg">Scanning through ASTRA</string>
    <string name="successfully_signed_up">Successfully Signed Up</string>
    <string name="error_signing_up">Error Signing Up !!</string>
    <string name="signin_up">Signing Up ...</string>
    <string name="continue_to_panel">Continue</string>
    <string name="signing_in">Signing In ...</string>
    <string name="sign_in">Sign In</string>
    <string name="save">Save</string>

    <!-- search general user -->
    <string name="search_general_user">SEARCH USER</string>
    <string name="saveqr">Save QR</string>
    <string name="myqr">MyQR</string>
    <string name="copy">Copy</string>
    <string name="RemoveQR">RemoveQR</string>

    <!--    admin view report-->
    <string name="DOWNLOAD_REPORT">Download Report</string>
    <string name="DURATION">Duration</string>
    <string name="ERROR_INVALID_DATE_RANGE">Invalid Date Range !!</string>
    <string name="PLEASE_SELECT_THE_DATES">Please select the dates !!</string>
    <string name="excel_mime_type">application/vnd.openxmlformats-officedocument.spreadsheetml.sheet</string>
    <string name="download_template">astra-</string>
    <string name="download_title">Astra</string>
    <string name="purpose">Purpose</string>
    <string name="search">Search</string>


</resources>
